2A/05_Projet_GL/src/test/deca/syntax/valid/Objet/46_declaVarDansMethod.deca
// Description:
//    Programme : initialisation d'un variable dans une methode
// Resultats:
//      Programme correcte
//
// Historique:
//    cree le 20/01/2024
class A {
    int x;
    
    int getZ(int y){
        int z = x+y;
        return z;
    }
    
}