2A/05_Projet_GL/src/test/deca/syntax/invalid/Objet/16_DeclMethodSansIdent.deca
// Description:
//    Programme definition d'une methode sans nom
// Resultats:
//      Programme incorrecte syntaxiquement : 9:8: no viable alternative at input 'int('
// Historique:
//    cree le 17/01/2023
class A extends B {
    protected boolean f = true;
    int ()
    {
        return f;
    }
}